[package]
name = "kata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.82.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
clap = { version = "4.2.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
backoff = "0.4.0"
futures = "0.3.18"
anyhow = "1.0.51"
log = "0.4.14"
tracing = "0.1.29"
thiserror = "1.0.30"
schemars = "0.8.6"
tracing-subscriber = "0.3.1"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9.21"
